[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/objects/Bullet.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 5.57299

[sub_resource type="Animation" id=1]
resource_name = "hit"

[node name="Bullet" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( -8.9407e-08, 0 )
scale = Vector2( 1, 1 )
color = Color( 1, 0.866667, 0, 1 )
polygon = PoolVector2Array( -1, -1, 1, -1, 1, 1, -1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 1 )

[node name="LifeTimer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
